--- a/styles.css
+++ b/styles.css
@@ -524,7 +524,7 @@ footer {
     }
     
     .content-section {
-        padding: 2rem 0;
+        padding: 2rem 0 0 0;
     }
     
     .container {
